--- a/PreviousProjects.html
+++ b/PreviousProjects.html
@@ -149,12 +149,32 @@
                 </div>
             </div>
         </div>
+
+        <div class="whiteBackground">
+            <div class="text">
+                <div class="proj">
+                    <div class="projDesc">
+                        <h2>Personal Portfolio Website</h2>
+                        <p>
+                            This website itself is a good example of my web development skills. It was built from scratch using HTML/CSS
+                            for the structure and styling, jQuery for a few nice visual features as well as the "Page Last Updated"
+                            information in the footer. I used PHP as the server-side language in order to handle the "Contact Me" form.
+                            I did all this in my spare time alongside University because it's something I genuinely enjoy.
+                            
+                        </p>
+                    </div>
+                    <div class="imgWrapper">
+                        <img src="Images/PersonalPortfolioWebsite.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     </div>
 
     <footer>
-        <p class="lastUpdated">Last Updated: </p>
+        <p class="lastUpdated">Page Last Updated: </p>
         <p>Copyright &copy; Josh Warburton 2018</p>
         <div class="footerlogo">
             <a href="https://www.linkedin.com/in/joshwarburton/"><img src="Images/LinkedIn.png" alt="" width="40"
