--- a/ProgSoc.html
+++ b/ProgSoc.html
@@ -67,7 +67,7 @@
             <div class="whiteBackground">
                 <div class="text">
                     <div class="cvdown">
-                        <p><a href="download/TestFile.zip"><u><strong>Click here to download todays material!</strong></u></a></p>
+                        <p><a href="download/ProgSoc-Pacman.zip"><u><strong>Click here to download todays material!</strong></u></a></p>
                     </div>
                 </div>
             </div>
@@ -75,7 +75,7 @@
     </div>
 	
     <footer>
-        <p class="lastUpdated">Last Updated: </p>
+        <p class="lastUpdated">Page Last Updated: </p>
         <p>Copyright &copy; Josh Warburton 2018</p>
         <div class="footerlogo">
             <a href="https://www.linkedin.com/in/joshwarburton/"><img src="Images/LinkedIn.png" alt="" width="40"
