--- a/Recommendations.html
+++ b/Recommendations.html
@@ -121,7 +121,7 @@
     </div>
 
     <footer>
-        <p class="lastUpdated">Last Updated: </p>
+        <p class="lastUpdated">Page Last Updated: </p>
         <p>Copyright &copy; Josh Warburton 2018</p>
         <div class="footerlogo">
             <a href="https://www.linkedin.com/in/joshwarburton/"><img src="Images/LinkedIn.png" alt="" width="40"
