--- a/index.html
+++ b/index.html
@@ -153,11 +153,44 @@
                     </div>
                 </div>
             </div>
+
+            <div class="greyBackground">
+                <h1 class="pageTitle">Source Control & Databases</h1>
+                <div class="text">
+                    
+                    <h3>Source Control</h3>
+
+                    <p>
+                        For University and personal projects, I use GitHub Desktop for all my source control. This is partly because it 
+                        gives me a platform to share my work to a wider audience and also because I find it to be a really user friendly
+                        bit of software. Whilst I was working with TSS Infrastructure I was exposed to Visual Studio's inbuilt Team
+                        Foundation Server as a way of source control and as a result, this is also something I'm very comfortable with.
+                    </p>
+
+                    <h3>Databases</h3>
+
+                    <p>
+                        I have used SQL and databases in a number of projects, both in University and in the workplace. In University I
+                        have used both Oracle SQL Developer and MySQL (alongside PHP) whereas I have used SQL Server Management Studio
+                        in a commercial environment. SQL is something I feel very comfortable with irrespective of environment.
+                    </p>
+
+                    <div class="codeLogoList">
+                        <div class="codeLogo"><img src="Images/GitHubLogoLarge.png" alt="" width="150" height="150"></div>
+                        <div class="codeLogo"><img src="Images/TFSLogo.png" alt="" width="150" height="150"></div>
+                        <div class="codeLogo"><img src="Images/SQLServerManagementStudioLogo.png" alt="" width="199" height="150"></div>
+                        <div class="codeLogo"><img src="Images/OracleSQLDeveloperLogo.png" alt="" width="150" height="150"></div>
+                        <div class="codeLogo"><img src="Images/MySQLLogo.png" alt="" width="216" height="150"></div>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
     </div>
 
     <footer>
-        <p class="lastUpdated">Last Updated: </p>
+        <p class="lastUpdated">Page Last Updated: </p>
         <p>Copyright &copy; Josh Warburton 2018</p>
         <div class="footerlogo">
             <a href="https://www.linkedin.com/in/joshwarburton/"><img src="Images/LinkedIn.png" alt="" width="40"
