Added Titles into the banner

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                             <img src="Images/Logo2018.png">
                         </div>
                     </div> -->
-                    <!-- <h1 class="heading">
-                "Motivation comes from working on things we care about"
-            </h1> -->
+                    <h1 class="heading">
+                        About Me
+                    </h1>
                     <div class="circle">
                         <img src="Images/Logo2018.png">
                     </div>
@@ -81,9 +81,8 @@
     <div class="container">
         <div class="AboutMeList">
             <div class="whiteBackground">
-                <h1 class="pageTitle">About Me</h1>
                 <div class="text">
-                    <p><br />
+                    <p>
                         I'm currently studying in my second year at Sheffield Hallam University on the BEng Software
                         Engineering course.
                         Software Development is my passion and is the reason why after 3 years in the recruitment
