--- a/WorkExperience.html
+++ b/WorkExperience.html
@@ -89,7 +89,7 @@
                             <div class="companyLogo"><img src="Images/TSSLogo.png" alt="" width="126" height="80"></div>
                             <h4>Software Developer</h4>
                             <h4>TSS Infrastructure Services</h4>
-                            <h4>June 2018 - September 2018</h4>
+                            <h4>June 2018 - Present</h4>
                         </div>
                 
                         <div class="jobDesc">
