Added all content for the projects page plus new headers

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                                 <li><a href="Qualifications.html" class="slideHover">Qualifications</a></li>
                                 <li><a href="WorkExperience.html" class="slideHover">Work Experience</a></li>
                                 <li><a href="Recommendations.html" class="slideHover">Recommendations</a></li>
-                                <li><a href="PreviousProjects.html" class="slideHover">Previous Projects</a></li>
+                                <li><a href="Projects.html" class="slideHover">Projects</a></li>
                                 <li><a href="CV.html" class="slideHover">CV</a></li>
                                 <li><a href="ContactMe.php" class="slideHover">Contact Me</a></li>
                             </ul>
@@ -59,12 +59,6 @@
                 </svg>
     
                 <div class="BannerCont-content">
-    
-                    <!-- <div class="banner">
-                        <div class="circle">
-                            <img src="Images/Logo2018.png">
-                        </div>
-                    </div> -->
                     <h1 class="heading">
                         About Me
                     </h1>
