--- a/WorkExperience.html
+++ b/WorkExperience.html
@@ -42,7 +42,7 @@
                                         <li><a href="Qualifications.html" class="slideHover">Qualifications</a></li>
                                         <li><a href="WorkExperience.html" class="pageCheck">Work Experience</a></li>
                                         <li><a href="Recommendations.html" class="slideHover">Recommendations</a></li>
-                                        <li><a href="PreviousProjects.html" class="slideHover">Previous Projects</a></li>
+                                        <li><a href="Projects.html" class="slideHover">Projects</a></li>
                                         <li><a href="CV.html" class="slideHover">CV</a></li>
                                         <li><a href="ContactMe.php" class="slideHover">Contact Me</a></li>
                                     </ul>
@@ -60,12 +60,6 @@
                         </svg>
             
                         <div class="BannerCont-content">
-            
-                            <!-- <div class="banner">
-                                <div class="circle">
-                                    <img src="Images/Logo2018.png">
-                                </div>
-                            </div> -->
                             <h1 class="heading">
                                 Work Experience
                             </h1>
