added all JS side validation for the form and removed error logic from the PHP file

--- a/Projects.html
+++ b/Projects.html
@@ -399,27 +399,19 @@
             </div>
 
             <div class="inputBox">
-                <span class="requiredField">*</span>
-                <input type="text" name="name" id="name" placeholder="Name" required>
-                <br />
+                <input errorName="name" type="text" name="name" id="name" placeholder="Name" required>
             </div>
 
             <div class="inputBox">
-                <span class="requiredField">*</span>
-                <input type="email" name="email" id="email" placeholder="Email" required>
-                <br />
+                <input errorName="email" type="email" name="email" id="email" placeholder="Email" required>
             </div>
 
             <div class="inputBox">
-                <span class="requiredField">*</span>
-                <input type="text" name="phoneNumber" id="phoneNumber" placeholder="Phone Number" required>
-                <br />
+                <input errorName="phone number" type="text" name="phoneNumber" id="phoneNumber" placeholder="Phone Number" required>
             </div>
 
             <div class="inputBox">
-                <span class="requiredField">*</span>
-                <textarea name="message" id="message" placeholder="Type your message here..." required></textarea>
-                <br />
+                <textarea errorName="message" name="message" id="message" placeholder="Type your message here..." required></textarea>
             </div>
 
             <div class="inputBox">
