added functionality for the popout contact me page

--- a/Projects.html
+++ b/Projects.html
@@ -46,7 +46,6 @@
                                 <li><a href="Recommendations.html" class="slideHover">Recommendations</a></li>
                                 <li><a href="Projects.html" class="pageCheck">Projects</a></li>
                                 <li><a href="CV.html" class="slideHover">CV</a></li>
-                                <li><a href="ContactMe.php" class="slideHover">Contact Me</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -88,7 +87,7 @@
                     <div class="proj">
                         <div class="projDesc">
                             <h2>Personal Portfolio Website</h2>
-                            <p>Written In: PHP7, HTML, CSS/SASS, jQuery</p>
+                            <p><strong>Written In: PHP7, HTML, CSS/SASS, jQuery</strong></p>
                             <p>
                                 This website itself is a great example of my web development skills and really shows my
                                 passion
@@ -118,7 +117,7 @@
                     <div class="proj">
                         <div class="projDesc">
                             <h2>Events Website</h2>
-                            <p>Written In: PHP7, HTML, CSS/SASS, jQuery, Vue.js, SQL, Google Maps API</p>
+                            <p><strong>Written In: PHP7, HTML, CSS/SASS, jQuery, Vue.js, SQL, Google Maps API</strong></p>
                             <p>
                                 This is my flagship project. I experimented with lots of new technologies in this one in
                                 order
@@ -134,7 +133,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="http://www.joshwarburton.co.uk/eventswebsite" class="footnote">
+                <a href="http://www.joshwarburton.co.uk/Events-Website" class="footnote">
                     <p>I have hosted the website so that all the functionality can be displayed in full. You can find it
                         here!</p>
                 </a>
@@ -147,7 +146,7 @@
                     <div class="proj">
                         <div class="projDesc">
                             <h2>Game Library</h2>
-                            <p>Written In: C++</p>
+                            <p><strong>Written In: C++</strong></p>
                             <p>
                                 User can login to multiple accounts and manage their library by buying, selling and
                                 gifting
@@ -172,7 +171,7 @@
                     <div class="proj">
                         <div class="projDesc">
                             <h2>Snake and Mouse</h2>
-                            <p>Written In: C++</p>
+                            <p><strong>Written In: C++</strong></p>
                             <p>
                                 Grid-style game where the user plays as a mouse who's objective is to find a nut and
                                 escape
@@ -197,7 +196,7 @@
                         <div class="projDesc">
                             <h2>Message Board Server</h2>
 
-                            <p>Written In: Java</p>
+                            <p><strong>Written In: Java</strong></p>
                             <p>
                                 This is a server that was created to work alongside a client also created by myself
                                 to function together as a message board using JSON. Emphasis was on server side
@@ -223,7 +222,7 @@
                     <div class="proj">
                         <div class="projDesc">
                             <h2>Message Board Client</h2>
-                            <p>Written In: Java</p>
+                            <p><strong>Written In: Java</strong></p>
                             <p>
                                 This is a client that was created to work alongside a server also created by myself
                                 to function together as a message board using JSON. Functionality included: Fully
@@ -248,7 +247,7 @@
                     <div class="proj">
                         <div class="projDesc">
                             <h2>Workplace Hierarchy Viewer</h2>
-                            <p>Written In: Java</p>
+                            <p><strong>Written In: Java</strong></p>
                             <p>
                                 This program is designed to take a .csv file of employee details and read it in to
                                 various
@@ -276,7 +275,7 @@
                     <div class="proj">
                         <div class="projDesc">
                             <h2>Forum</h2>
-                            <p>Written In: C# ASP.NET, HTML, CSS, SQL</p>
+                            <p><strong>Written In: C# ASP.NET, HTML, CSS, SQL</strong></p>
                             <p>
                                 It has the functionality to
                                 create users, boards, post on those boards, view all the posts that user has
@@ -302,7 +301,7 @@
                     <div class="proj">
                         <div class="projDesc">
                             <h2>Breakout Game</h2>
-                            <p>Written In: C#</p>
+                            <p><strong>Written In: C#</strong></p>
                             <p>
                                 It was developed in C# Windows Forms. The final version of the
                                 game includes numerous features including randomised colouring of each block,
@@ -329,7 +328,7 @@
                     <div class="proj">
                         <div class="projDesc">
                             <h2>Car Park System</h2>
-                            <p>Written In: C#</p>
+                            <p> <strong>Written In: C#</strong></p>
                             <p>
                                 This was created
                                 with
@@ -357,7 +356,7 @@
                     <div class="proj">
                         <div class="projDesc">
                             <h2>Christmas Tree</h2>
-                            <p>Written In: C++</p>
+                            <p><strong>Written In: C++</strong></p>
                             <p>
                                 This is a a simple program that's key function is to take a number and
                                 print a Christmas Tree of that height. The program includes a few
@@ -395,7 +394,7 @@
         <form action="SendMail.php" method="POST" id="contactForm">
 
             <div class="inputBox centered">
-                <h1 class="contactMeTitle">Contact Me</h1>
+                <h1 class="contactMeTitle">Get In Touch</h1>
             </div>
 
             <div class="inputBox">
@@ -415,9 +414,7 @@
             </div>
 
             <div class="inputBox">
-                <span class="requiredFieldBtn">*</span>
                 <input type="submit" value="Send Details" class="btnStandard" id="sendMessage">
-                <br />
             </div>
 
         </form>
